-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
5964
Just hit this issue where obd_zombid hits bad pointer, while running replay-dual (test 16):
(gdb) bt
#0 atomic_read (v=0xffff880090a74140)
at /home/green/bk/linux-2.6.32-279.2.1.el6-debug/arch/x86/include/asm/atomic_64.h:23
#1 osc_cleanup (obd=0xffff880050ed0fc0)
at /home/green/git/lustre-release/lustre/osc/osc_request.c:3533
#2 0xffffffffa0540ec2 in class_decref ()
#3 0xffffffffa051d8a4 in obd_zombie_impexp_cull ()
#4 0xffffffffa051dc75 in obd_zombie_impexp_thread ()
#5 0xffffffff8100c14a in child_rip () at arch/x86/kernel/entry_64.S:1211
#6 0x0000000000000000 in ?? ()
line 3533 is:
LASSERT(cfs_atomic_read(&cli->cl_cache->ccc_users) > 0);
captured crashdump is in /exports/crashdumps/t/vmdump